fixing all the overflow issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   background: #161616;
 }
 
@@ -116,6 +116,31 @@ p {
   width: 100%;
   height: 100%;
   position: fixed;
+  display: flex;
+  align-items: center;
+  overflow-y: scroll;
+}
+
+.visibility-container {
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: .6s ease-in;
+  -webkit-transition: .6s ease-in;
+  -moz-transition: .6s ease-in;
+  -o-transition: .6s ease-in;
+  transition-delay: .4s;
+  -webkit-transition-delay: .4s;
+  -moz-transition-delay: .4s;
+  -o-transition-delay: .4s;
+}
+
+.active {
+  opacity: 0;
 }
 
 .home {
@@ -131,13 +156,37 @@ p {
 .develop {
   background: #0C102E;
   top: 0%;
-  left: 200%;
+  left: 100%;
 }
 
 .gaming {
   background: #161616;
   top: 0%;
-  left: 300%;
+  left: 100%;
+}
+
+.container-title {
+  width: 40%;
+  margin-left: 18%;
+}
+
+.main-title {
+  font-size: 72px;
+  color: white;
+  text-transform: uppercase;
+}
+
+.svg-hl {
+  width: 50%;
+  margin-left: 18%;
+}
+
+.main-content-scroll {
+  width: 70%;
+  height: 80%;
+  background: #fff;
+  position: absolute;
+  top: 90%;
 }
 
 .footer {
